syntax="proto3";
option java_multiple_files = true;
package com.example.dataserver.networking;
package networking.provider;

message ProtobufMessage{
  string massageOrObject = 1;
}

service ProtobufProviderService{
  rpc createProvider(ProtobufMessage) returns (ProtobufMessage);
  rpc getAllProviders(ProtobufMessage) returns (ProtobufMessage);
  rpc getProviderById(ProtobufMessage) returns (ProtobufMessage);
  rpc editProvider(ProtobufMessage) returns (ProtobufMessage);
  rpc removeProvider(ProtobufMessage) returns (ProtobufMessage);
  rpc getAllNotApprovedProviders(ProtobufMessage) returns (ProtobufMessage);
}